--- a/Test1/test.html
+++ b/Test1/test.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="/Test1/test.css">
     <title>Document</title>
 </head>
 <body>
         <button id="decrease" onclick="decrease()">-</button>
         <input type="number" id="number" value="0">
         <button id="increase" onclick="increase()">+</button>
-    <script src="test.js"></script>
+    <script src="/Test1/test.js"></script>
 </body>
 </html>
