--- a/Homework/index.html
+++ b/Homework/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Homework/index.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="/Homework/font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -58,7 +58,7 @@
         </div>
     </section>
     <div class="icon1">
-        <i class="fa-solid fa-star"></i>
+        <i id="fa-star" class="fa fa-star fa-2x" aria-hidden="true"></i>
     </div>
     <script src="/Homework/index.js"></script>
 </body>
