--- a/Homework/index.html
+++ b/Homework/index.html
@@ -14,14 +14,30 @@
             <div class="column-t start">
                 <p class="pstart">Start</p>
             </div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
-            <div class="column-t emty"></div>
+            <div class="column-t emty">
+                <p class="pstart">1</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">2</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">3</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">4</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">5</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">6</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">7</p>
+            </div>
+            <div class="column-t emty">
+                <p class="pstart">8</p>
+            </div>
             <div class="column-t pause"></div>
         </div>
         <div class="right road">
@@ -59,6 +75,11 @@
     </section>
     <div class="icon1">
         <i id="fa-star" class="fa fa-star fa-2x" aria-hidden="true"></i>
+    </div>
+    <div class="btn1">
+        <button class="btn2" id="roll">
+            Roll Dice
+        </button>
     </div>
     <script src="/Homework/index.js"></script>
 </body>
